refactor: 分离公共组件并自动装配

--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -84,6 +84,16 @@
         <dependencies>
             <dependency>
                 <groupId>org.laokou</groupId>
+                <artifactId>laokou-common-data-cache</artifactId>
+                <version>${laokou.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.laokou</groupId>
+                <artifactId>laokou-common-data-filter</artifactId>
+                <version>${laokou.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.laokou</groupId>
                 <artifactId>laokou-common-log</artifactId>
                 <version>${laokou.version}</version>
             </dependency>
