--- a/laokou-service/laokou-admin/laokou-admin-server/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-server/pom.xml
@@ -32,6 +32,14 @@
 			<artifactId>laokou-common-mybatis-plus</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.laokou</groupId>
+			<artifactId>laokou-common-data-filter</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.laokou</groupId>
+			<artifactId>laokou-common-data-cache</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
 		</dependency>
