--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -18,7 +18,7 @@
         <!--mysql版本-->
         <mysql.version>5.1.46</mysql.version>
         <!--admin版本-->
-        <spring-boot-admin.version>3.0.0-M9</spring-boot-admin.version>
+        <spring-boot-admin.version>3.0.0</spring-boot-admin.version>
         <!--flowable版本-->
         <flowable.version>7.0.0.M1</flowable.version>
         <!--mybatis-plus版本 -->
