--- a/laokou-common/laokou-common-dynamic-datasource/pom.xml
+++ b/laokou-common/laokou-common-dynamic-datasource/pom.xml
@@ -16,6 +16,10 @@
             <groupId>org.laokou</groupId>
             <artifactId>laokou-common-mybatis-plus</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
