refactor: 动态数据源更换为mybatis的动态数据源

--- a/laokou-common/laokou-common-mybatis-plus/pom.xml
+++ b/laokou-common/laokou-common-mybatis-plus/pom.xml
@@ -29,5 +29,9 @@
             <groupId>org.laokou</groupId>
             <artifactId>laokou-common-swagger</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 </project>
