refactor: readme增加如何启动该项目的步骤

--- a/laokou-service/laokou-module/pom.xml
+++ b/laokou-service/laokou-module/pom.xml
@@ -23,5 +23,6 @@
         <module>laokou-flowable</module>
         <module>laokou-mongodb</module>
         <module>laokou-kafka</module>
+        <module>laokou-tenant</module>
     </modules>
 </project>
