refactor: 优化思路： user\dept\menu\role共享数据源 login_log\dict\message\resource\oss\mail\sms独立数据源

--- a/laokou-service/laokou-auth/laokou-auth-server/src/main/resources/application.yml
+++ b/laokou-service/laokou-auth/laokou-auth-server/src/main/resources/application.yml
@@ -24,7 +24,7 @@ spring:
     servlet:
       content-type: text/html
     mode: HTML5
-    prefix: classpath:/templates
+    prefix: classpath:/templates/
   cloud:
     # sentinel
     sentinel:
