--- a/laokou-service/laokou-module/pom.xml
+++ b/laokou-service/laokou-module/pom.xml
@@ -24,5 +24,6 @@
         <module>laokou-mongodb</module>
         <module>laokou-kafka</module>
         <module>laokou-tenant</module>
+        <module>laokou-freemarker</module>
     </modules>
 </project>
