--- a/laokou-service/laokou-module/pom.xml
+++ b/laokou-service/laokou-module/pom.xml
@@ -25,5 +25,6 @@
         <module>laokou-kafka</module>
         <module>laokou-tenant</module>
         <module>laokou-freemarker</module>
+        <module>laokou-power-job</module>
     </modules>
 </project>
