--- a/laokou-service/laokou-module/laokou-oss/laokou-oss-server/pom.xml
+++ b/laokou-service/laokou-module/laokou-oss/laokou-oss-server/pom.xml
@@ -51,6 +51,14 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-bootstrap</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-log</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
