--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -86,6 +86,11 @@
         <dependencies>
             <dependency>
                 <groupId>org.laokou</groupId>
+                <artifactId>laokou-openfeign</artifactId>
+                <version>${laokou.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.laokou</groupId>
                 <artifactId>laokou-power-job</artifactId>
                 <version>${laokou.version}</version>
             </dependency>
