refactor: 去掉多余代码

--- a/laokou-service/laokou-module/laokou-freemarker/pom.xml
+++ b/laokou-service/laokou-module/laokou-freemarker/pom.xml
@@ -11,4 +11,11 @@
     <groupId>org.laokou</groupId>
     <artifactId>laokou-freemarker</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-mybatis-plus</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
