--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -79,6 +79,8 @@
         <aws-java-sdk-s3.version>1.12.267</aws-java-sdk-s3.version>
         <!--dynamic-datasource版本-->
         <dynamic-datasource.version>3.6.0</dynamic-datasource.version>
+        <!--shardingsphere-jdbc-core版本-->
+        <shardingsphere-jdbc-core.version>5.3.2</shardingsphere-jdbc-core.version>
     </properties>
 
     <!-- 定义全局jar版本,模块使用需要再次引入但不用写版本号 -->
@@ -89,6 +91,11 @@
                 <artifactId>laokou-openfeign</artifactId>
                 <version>${laokou.version}</version>
             </dependency>
+<!--            <dependency>-->
+<!--                <groupId>org.apache.shardingsphere</groupId>-->
+<!--                <artifactId>shardingsphere-jdbc-core</artifactId>-->
+<!--                <version>${shardingsphere-jdbc-core.version}</version>-->
+<!--            </dependency>-->
             <dependency>
                 <groupId>org.laokou</groupId>
                 <artifactId>laokou-power-job</artifactId>
