--- a/pom.xml
+++ b/pom.xml
@@ -34,13 +34,14 @@
         <!--spring-doc版本-->
         <spring-doc.version>2.0.2</spring-doc.version>
         <!--shardingsphere版本-->
-        <shardingsphere.version>5.3.1</shardingsphere.version>
+        <shardingsphere.version>5.3.2</shardingsphere.version>
     </properties>
     <dependencyManagement>
         <dependencies>
+            <!-- 定义 shardingsphere 版本 -->
 <!--            <dependency>-->
 <!--                <groupId>org.apache.shardingsphere</groupId>-->
-<!--                <artifactId>shardingsphere</artifactId>-->
+<!--                <artifactId>shardingsphere-jdbc-core</artifactId>-->
 <!--                <version>${shardingsphere.version}</version>-->
 <!--                <type>pom</type>-->
 <!--                <scope>import</scope>-->
