--- a/laokou-service/laokou-module/laokou-mail/laokou-mail-server/src/main/resources/bootstrap.yml
+++ b/laokou-service/laokou-module/laokou-mail/laokou-mail-server/src/main/resources/bootstrap.yml
@@ -38,3 +38,6 @@ spring:
           - data-id: application-common.yaml
             group: LAOKOU_GROUP
             refresh: true
+          - data-id: application-common-redis.yaml
+            group: LAOKOU_GROUP
+            refresh: true
