--- a/laokou-service/laokou-module/laokou-sms/laokou-sms-server/src/main/resources/application.yml
+++ b/laokou-service/laokou-module/laokou-sms/laokou-sms-server/src/main/resources/application.yml
@@ -1,1 +1,9 @@
+server:
+  port: 10011
 
+spring:
+  application:
+    name: @pom.parent.artifactId@
+  profiles:
+    # dev|test|prod
+    active: @profile.active@
