--- a/laokou-service/laokou-module/laokou-freemarker/pom.xml
+++ b/laokou-service/laokou-module/laokou-freemarker/pom.xml
@@ -13,12 +13,12 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.laokou</groupId>
-            <artifactId>laokou-common-mybatis-plus</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-freemarker</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-core</artifactId>
         </dependency>
     </dependencies>
 
