--- a/laokou-service/laokou-module/laokou-sms/laokou-sms-server/pom.xml
+++ b/laokou-service/laokou-module/laokou-sms/laokou-sms-server/pom.xml
@@ -20,6 +20,10 @@
             <artifactId>laokou-redis</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-undertow</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.github.ulisesbocchio</groupId>
             <artifactId>jasypt-spring-boot-starter</artifactId>
         </dependency>
@@ -34,6 +38,10 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-bootstrap</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-freemarker</artifactId>
         </dependency>
     </dependencies>
 
