--- a/laokou-service/laokou-module/laokou-rocketmq/laokou-rocketmq-consumer/pom.xml
+++ b/laokou-service/laokou-module/laokou-rocketmq/laokou-rocketmq-consumer/pom.xml
@@ -27,20 +27,12 @@
             <artifactId>jasypt-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.github.openfeign</groupId>
-            <artifactId>feign-core</artifactId>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-openfeign</artifactId>
         </dependency>
         <dependency>
             <groupId>org.laokou</groupId>
             <artifactId>laokou-common-swagger</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.laokou</groupId>
-            <artifactId>laokou-redis</artifactId>
         </dependency>
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
@@ -53,6 +45,10 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-bootstrap</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-sentinel</artifactId>
         </dependency>
     </dependencies>
 
