--- a/laokou-service/laokou-module/laokou-rocketmq/laokou-rocketmq-server/pom.xml
+++ b/laokou-service/laokou-module/laokou-rocketmq/laokou-rocketmq-server/pom.xml
@@ -42,6 +42,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-bootstrap</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
