--- a/laokou-service/laokou-module/laokou-sms/laokou-sms-server/pom.xml
+++ b/laokou-service/laokou-module/laokou-sms/laokou-sms-server/pom.xml
@@ -43,6 +43,10 @@
             <groupId>org.laokou</groupId>
             <artifactId>laokou-freemarker</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
