--- a/laokou-service/laokou-module/laokou-mail/laokou-mail-server/pom.xml
+++ b/laokou-service/laokou-module/laokou-mail/laokou-mail-server/pom.xml
@@ -47,6 +47,10 @@
             <groupId>com.github.ulisesbocchio</groupId>
             <artifactId>jasypt-spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
