--- a/laokou-service/laokou-module/laokou-rocketmq/laokou-rocketmq-consumer/pom.xml
+++ b/laokou-service/laokou-module/laokou-rocketmq/laokou-rocketmq-consumer/pom.xml
@@ -23,6 +23,10 @@
             <artifactId>laokou-rocketmq-client</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-loadbalancer</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.github.ulisesbocchio</groupId>
             <artifactId>jasypt-spring-boot-starter</artifactId>
         </dependency>
