--- a/laokou-service/laokou-module/laokou-oss/laokou-oss-server/pom.xml
+++ b/laokou-service/laokou-module/laokou-oss/laokou-oss-server/pom.xml
@@ -59,6 +59,10 @@
             <groupId>org.laokou</groupId>
             <artifactId>laokou-common-log</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-tenant</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
