--- a/laokou-service/laokou-module/laokou-tenant/pom.xml
+++ b/laokou-service/laokou-module/laokou-tenant/pom.xml
@@ -16,6 +16,10 @@
             <groupId>org.laokou</groupId>
             <artifactId>laokou-common-mybatis-plus</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-auth-client</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
