--- a/laokou-cloud/laokou-openfeign/pom.xml
+++ b/laokou-cloud/laokou-openfeign/pom.xml
@@ -24,6 +24,10 @@
             <groupId>io.github.openfeign</groupId>
             <artifactId>feign-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-okhttp</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
