--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -78,7 +78,7 @@
         <!--dynamic-datasource版本-->
         <dynamic-datasource.version>3.6.0</dynamic-datasource.version>
         <!--shardingsphere-jdbc-core版本-->
-        <shardingsphere-jdbc-core.version>5.3.2</shardingsphere-jdbc-core.version>
+        <shardingsphere-jdbc-core.version>5.3.1</shardingsphere-jdbc-core.version>
         <!--httpclient5版本-->
         <httpclient5.version>5.2.1</httpclient5.version>
     </properties>
@@ -96,11 +96,11 @@
                 <artifactId>laokou-openfeign</artifactId>
                 <version>${laokou.version}</version>
             </dependency>
-<!--            <dependency>-->
-<!--                <groupId>org.apache.shardingsphere</groupId>-->
-<!--                <artifactId>shardingsphere-jdbc-core</artifactId>-->
-<!--                <version>${shardingsphere-jdbc-core.version}</version>-->
-<!--            </dependency>-->
+            <dependency>
+                <groupId>org.apache.shardingsphere</groupId>
+                <artifactId>shardingsphere-jdbc-core</artifactId>
+                <version>${shardingsphere-jdbc-core.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.laokou</groupId>
                 <artifactId>laokou-power-job</artifactId>
