--- a/laokou-service/laokou-auth/laokou-auth-server/src/main/resources/bootstrap.yml
+++ b/laokou-service/laokou-auth/laokou-auth-server/src/main/resources/bootstrap.yml
@@ -27,17 +27,17 @@ spring:
         # https://github.com/alibaba/spring-cloud-alibaba/blob/2021.x/spring-cloud-alibaba-docs/src/main/asciidoc-zh/nacos-config.adoc
         # 指定读取的文件格式
         file-extension: yaml
-        group: LAOKOU_GROUP
+        group: ${NACOS-GROUP}
         refresh-enabled: true
         # 读取公共配置
         # Data Id 在默认的组 DEFAULT_GROUP,不支持配置的动态刷新
         extension-configs:
           - data-id: application-common-datasource.yaml
-            group: LAOKOU_GROUP
+            group: ${NACOS-GROUP}
             refresh: true
           - data-id: application-common-redis.yaml
-            group: LAOKOU_GROUP
+            group: ${NACOS-GROUP}
             refresh: true
           - data-id: application-common.yaml
-            group: LAOKOU_GROUP
+            group: ${NACOS-GROUP}
             refresh: true
