--- a/laokou-service/laokou-admin/laokou-admin-server/src/main/resources/application.yml
+++ b/laokou-service/laokou-admin/laokou-admin-server/src/main/resources/application.yml
@@ -40,7 +40,7 @@ spring:
           nacos:
             server-addr: @NACOS-CONFIG-ADDRESS@
             namespace: @NACOS-NAMESPACE@
-            group-id: LAOKOU_GROUP
+            group-id: @NACOS-GROUP@
             data-id: admin-sentinel.json
             data-type: json
             rule-type: flow
