--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -6,15 +6,15 @@
 
     <groupId>org.laokou</groupId>
     <artifactId>laokou-common-bom</artifactId>
-    <version>3.0.2</version>
+    <version>3.0.3</version>
     <packaging>pom</packaging>
 
     <properties>
-        <laokou.version>3.0.2</laokou.version>
+        <laokou.version>3.0.3</laokou.version>
         <!--boot版本-->
-        <spring-boot.version>3.0.2</spring-boot.version>
+        <spring-boot.version>3.0.3</spring-boot.version>
         <!--lombok版本-->
-        <lombok.version>1.18.20</lombok.version>
+        <lombok.version>1.18.26</lombok.version>
         <!--mysql版本-->
         <mysql.version>5.1.46</mysql.version>
         <!--admin版本-->
@@ -23,32 +23,32 @@
         <flowable.version>7.0.0.M1</flowable.version>
         <!--mybatis-plus版本 -->
         <mybatis-plus.version>3.5.3.1</mybatis-plus.version>
-        <!--commons-configuration版本-->
-        <commons-configuration.version>1.10</commons-configuration.version>
+        <!--commons-configuration2版本-->
+        <commons-configuration2.version>2.8.0</commons-configuration2.version>
         <!--redisson版本-->
         <redisson.version>3.19.3</redisson.version>
         <!--UserAgentUtils版本-->
         <UserAgentUtils.version>1.21</UserAgentUtils.version>
         <!--jsoup版本-->
-        <jsoup.version>1.12.1</jsoup.version>
-        <!--commons-collections版本-->
-        <commons-collections.version>3.2.1</commons-collections.version>
+        <jsoup.version>1.15.4</jsoup.version>
+        <!--commons-collections4版本-->
+        <commons-collections4.version>4.4</commons-collections4.version>
         <!--hutool-all版本-->
-        <hutool-all.version>5.8.8</hutool-all.version>
-        <!--commons-lang版本-->
-        <commons-lang.version>2.6</commons-lang.version>
+        <hutool-all.version>5.8.12</hutool-all.version>
+        <!--commons-lang3版本-->
+        <commons-lang3.version>3.12.0</commons-lang3.version>
         <!--commons-beanutils版本-->
-        <commons-beanutils.version>1.9.3</commons-beanutils.version>
+        <commons-beanutils.version>1.9.4</commons-beanutils.version>
         <!--commons-io版本-->
-        <commons-io.version>2.7</commons-io.version>
+        <commons-io.version>2.11.0</commons-io.version>
         <!--commons-logging版本-->
-        <commons-logging.version>1.1.1</commons-logging.version>
+        <commons-logging.version>1.2</commons-logging.version>
         <!--commons-fileupload版本-->
-        <commons-fileupload.version>1.3.3</commons-fileupload.version>
+        <commons-fileupload.version>1.5</commons-fileupload.version>
         <!--joda-time版本-->
-        <joda-time.version>2.10</joda-time.version>
+        <joda-time.version>2.12.2</joda-time.version>
         <!--jasypt版本-->
-        <jasypt.version>2.1.0</jasypt.version>
+        <jasypt.version>3.0.5</jasypt.version>
         <!--captcha版本-->
         <easy-captcha.version>1.6.2</easy-captcha.version>
         <!--guava版本-->
@@ -56,31 +56,33 @@
         <!--commons-codec版本-->
         <commons-codec.version>1.15</commons-codec.version>
         <!--freemarker模板引擎依赖-->
-        <freemarker.version>2.3.31</freemarker.version>
+        <freemarker.version>2.3.32</freemarker.version>
         <!--oshi版本-->
-        <oshi.version>5.8.0</oshi.version>
+        <oshi.version>6.4.0</oshi.version>
         <!-- elasticsearch版本-->
         <elasticsearch.version>7.6.2</elasticsearch.version>
         <!--rocketmq版本-->
-        <rocketmq.version>2.2.2</rocketmq.version>
+        <rocketmq.version>2.2.3</rocketmq.version>
         <!--jakarta.servlet-api版本-->
         <jakarta.servlet-api.version>6.0.0</jakarta.servlet-api.version>
         <!--easyexcel版本-->
         <easyexcel.version>3.2.1</easyexcel.version>
         <!--junit版本-->
-        <junit.version>4.13.1</junit.version>
+        <junit.version>4.13.2</junit.version>
         <!--spring-security-oauth2-authorization-server版本-->
         <spring-security-oauth2-authorization-server.version>1.0.1</spring-security-oauth2-authorization-server.version>
         <!--spring-boot-starter-oauth2-resource-server版本-->
-        <spring-boot-starter-oauth2-resource-server.version>3.0.0</spring-boot-starter-oauth2-resource-server.version>
+        <spring-boot-starter-oauth2-resource-server.version>3.0.3</spring-boot-starter-oauth2-resource-server.version>
         <!--aws-java-sdk-s3版本-->
         <aws-java-sdk-s3.version>1.12.267</aws-java-sdk-s3.version>
         <!--dynamic-datasource版本-->
-        <dynamic-datasource.version>3.6.0</dynamic-datasource.version>
+        <dynamic-datasource.version>3.6.1</dynamic-datasource.version>
         <!--shardingsphere-jdbc-core版本-->
         <shardingsphere-jdbc-core.version>5.3.1</shardingsphere-jdbc-core.version>
         <!--httpclient5版本-->
         <httpclient5.version>5.2.1</httpclient5.version>
+        <!--jna版本-->
+        <jna.version>5.13.0</jna.version>
     </properties>
 
     <!-- 定义全局jar版本,模块使用需要再次引入但不用写版本号 -->
@@ -134,11 +136,6 @@
             <dependency>
                 <groupId>org.laokou</groupId>
                 <artifactId>laokou-common-data-cache</artifactId>
-                <version>${laokou.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.laokou</groupId>
-                <artifactId>laokou-common-dynamic-datasource</artifactId>
                 <version>${laokou.version}</version>
             </dependency>
             <dependency>
@@ -201,9 +198,9 @@
                 <version>${mybatis-plus.version}</version>
             </dependency>
             <dependency>
-                <groupId>commons-lang</groupId>
-                <artifactId>commons-lang</artifactId>
-                <version>${commons-lang.version}</version>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons-lang3.version}</version>
             </dependency>
             <dependency>
                 <groupId>commons-codec</groupId>
@@ -231,9 +228,9 @@
                 <version>${commons-fileupload.version}</version>
             </dependency>
             <dependency>
-                <groupId>commons-configuration</groupId>
-                <artifactId>commons-configuration</artifactId>
-                <version>${commons-configuration.version}</version>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-configuration2</artifactId>
+                <version>${commons-configuration2.version}</version>
             </dependency>
             <dependency>
                 <groupId>joda-time</groupId>
@@ -241,9 +238,9 @@
                 <version>${joda-time.version}</version>
             </dependency>
             <dependency>
-                <groupId>commons-collections</groupId>
-                <artifactId>commons-collections</artifactId>
-                <version>${commons-collections.version}</version>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-collections4</artifactId>
+                <version>${commons-collections4.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.google.guava</groupId>
@@ -299,12 +296,12 @@
             <dependency>
                 <groupId>net.java.dev.jna</groupId>
                 <artifactId>jna</artifactId>
-                <version>${oshi.version}</version>
+                <version>${jna.version}</version>
             </dependency>
             <dependency>
                 <groupId>net.java.dev.jna</groupId>
                 <artifactId>jna-platform</artifactId>
-                <version>${oshi.version}</version>
+                <version>${jna.version}</version>
             </dependency>
             <dependency>
                 <groupId>de.codecentric</groupId>
@@ -468,11 +465,6 @@
             </dependency>
             <dependency>
                 <groupId>org.laokou</groupId>
-                <artifactId>laokou-log-client</artifactId>
-                <version>${laokou.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.laokou</groupId>
                 <artifactId>laokou-mongodb-client</artifactId>
                 <version>${laokou.version}</version>
             </dependency>
@@ -489,21 +481,6 @@
             <dependency>
                 <groupId>org.laokou</groupId>
                 <artifactId>laokou-flowable-server</artifactId>
-                <version>${laokou.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.laokou</groupId>
-                <artifactId>laokou-log-server</artifactId>
-                <version>${laokou.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.laokou</groupId>
-                <artifactId>laokou-api-server</artifactId>
-                <version>${laokou.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.laokou</groupId>
-                <artifactId>laokou-api-client</artifactId>
                 <version>${laokou.version}</version>
             </dependency>
             <dependency>
