--- a/laokou-service/laokou-module/laokou-mongodb/laokou-mongodb-server/pom.xml
+++ b/laokou-service/laokou-module/laokou-mongodb/laokou-mongodb-server/pom.xml
@@ -22,6 +22,10 @@
             <groupId>org.laokou</groupId>
             <artifactId>laokou-common-swagger</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-i18n</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
