--- a/laokou-service/laokou-module/laokou-rocketmq/laokou-rocketmq-consumer/pom.xml
+++ b/laokou-service/laokou-module/laokou-rocketmq/laokou-rocketmq-consumer/pom.xml
@@ -54,6 +54,10 @@
             <groupId>org.laokou</groupId>
             <artifactId>laokou-sentinel</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-i18n</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
