--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -85,11 +85,18 @@
         <jna.version>5.13.0</jna.version>
         <!--hibernate-validator版本-->
         <hibernate-validator.version>8.0.0.Final</hibernate-validator.version>
+        <!--mapstruct版本-->
+        <mapstruct.version>1.5.3.Final</mapstruct.version>
     </properties>
 
     <!-- 定义全局jar版本,模块使用需要再次引入但不用写版本号 -->
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.mapstruct</groupId>
+                <artifactId>mapstruct</artifactId>
+                <version>${mapstruct.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.hibernate.validator</groupId>
                 <artifactId>hibernate-validator</artifactId>
