refactor: 增加动态路由模块

--- a/laokou-service/laokou-admin/laokou-admin-server/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-server/pom.xml
@@ -115,6 +115,10 @@
 			<groupId>org.laokou</groupId>
 			<artifactId>laokou-openfeign</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.laokou</groupId>
+			<artifactId>laokou-dynamic-router</artifactId>
+		</dependency>
     </dependencies>
 	<build>
 		<plugins>
