--- a/laokou-service/laokou-auth/laokou-auth-server/pom.xml
+++ b/laokou-service/laokou-auth/laokou-auth-server/pom.xml
@@ -79,6 +79,10 @@
             <groupId>org.laokou</groupId>
             <artifactId>laokou-common-log</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-dynamic-router</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
