--- a/laokou-service/laokou-module/pom.xml
+++ b/laokou-service/laokou-module/pom.xml
@@ -26,5 +26,6 @@
         <module>laokou-freemarker</module>
         <module>laokou-power-job</module>
         <module>laokou-dynamic-router</module>
+        <module>laokou-hbase</module>
     </modules>
 </project>
