refactor: 修改sentinel的接口限流

--- a/laokou-service/laokou-admin/laokou-admin-server/src/main/resources/application.yml
+++ b/laokou-service/laokou-admin/laokou-admin-server/src/main/resources/application.yml
@@ -35,7 +35,10 @@ spring:
   cloud:
     # sentinel
     sentinel:
+      filter:
+        enabled: true
       datasource:
+        # 自定义名称
         db0:
           nacos:
             server-addr: @NACOS-CONFIG-ADDRESS@
