--- a/laokou-service/laokou-admin/laokou-admin-server/src/main/resources/application.yml
+++ b/laokou-service/laokou-admin/laokou-admin-server/src/main/resources/application.yml
@@ -44,7 +44,7 @@ spring:
             server-addr: @NACOS-CONFIG-ADDRESS@
             namespace: @NACOS-NAMESPACE@
             group-id: @NACOS-GROUP@
-            data-id: admin-sentinel.json
+            data-id: admin-flow.json
             data-type: json
             rule-type: flow
     # loadbalancer
